--- a/index.html
+++ b/index.html
@@ -4,29 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./style.css">
     <title>Document</title>
 </head>
 <body>
     <header>
         <nav>
-            <div>
+            <div id="header-logo">
                 <h1>Header Logo</h1>
             </div>
-            <div>
-                <a href="http://">Header Link 1</a>
-                <a href="http://">Header Link 2</a>
-                <a href="http://">Header Link 3</a>
+            <div class="navbar-links">
+                <a href="http://">header link one</a>
+                <a href="http://">header link two</a>
+                <a href="http://">header link three</a>
             </div>
         </nav>
     </header>
     <main>
         <section class="section-1">
-            <div>
+            <div class="section-1-item-1">
                 <h1>This website is awesome</h1>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem fugiat quae possimus quis sit, fuga ipsam id quos dolorem doloremque veritatis ad quas perspiciatis labore animi eum nesciunt molestias deleniti?</p>
-                <button>Sign Up</button>
+                <p>This website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast</p>
+                <button>Sign up</button>
             </div>
-            <div>
+            <div class="section-1-item-2">
                 <img src="" alt="this is place holder for image">
             </div>
         </section>
